--- a/api-extractor-fe/package.json
+++ b/api-extractor-fe/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "sass": "^1.91.0",
     "xlsx": "^0.18.5"
   },
